[MP-485] Rating for marketplace
Rating for marketplace

Rating for marketplace II

Rating for marketplace, update route position

[MP-485] add endpoint rating-summary

[MP-485] add endpoint rating-summary

[MP-485] add endpoint rating-summary, add validation value

[MP-485] add collection ratingSubMpCol

[MP-485] add collection ratingSubMpCol

[MP-485] add test file

[MP-485] add trigger image house keeping to media-svc

[MP-485] add trigger image house keeping to media-svc

[MP-485] remove debug
