# app/model/entity/rating_submission_mp.go
@@ -6,7 +6,7 @@ import (
 	"go.mongodb.org/mongo-driver/bson/primitive"
 )
 
-type RatingSubmisson struct {
+type RatingSubmissionMp struct {
 	ID              primitive.ObjectID `json:"id" bson:"_id,omitempty"`
 	RatingID        string             `json:"rating_id" bson:"rating_id,omitempty"`
 	UserID          *string            `json:"user_id" bson:"user_id,omitempty"`
@@ -17,6 +17,8 @@ type RatingSubmisson struct {
 	IPAddress       string             `json:"ip_address" bson:"ip_address,omitempty"`
 	UserAgent       string             `json:"user_agent" bson:"user_agent,omitempty"`
 	Avatar          string             `json:"avatar" bson:"avatar,omitempty"`
+	SourceUID       string             `json:"source_uid" bson:"source_uid"`
+	SourceType      string             `json:"source_type" bson:"source_type"`
 	SourceTransID   string             `json:"source_trans_id" bson:"source_trans_id,omitempty"`
 	LikeCounter     int                `json:"like_counter" bson:"like_counter,omitempty"`
 	UserPlatform    string             `json:"user_platform" bson:"user_platform,omitempty"`
@@ -29,6 +31,6 @@ type RatingSubmisson struct {
 	UpdatedAt       time.Time          `json:"-" bson:"updated_at,omitempty"`
 }
 
-func (RatingSubmisson) CollectionName() string {
-	return "ratingSubCol"
+func (RatingSubmissionMp) CollectionName() string {
+	return "ratingSubMpCol"
 }
